<resources>
    <string name="app_name">Bragging Rights</string>
    <string name="start_new_game">Start New Game</string>
    <string name="start">Start</string>
    <string name="need_to_add_a_new_game">Need to add a new game?</string>
    <string name="add_new_game">Add New Game</string>
    <string name="select_from_existing_game_template">Select from existing Game Template:</string>
    <string name="select_from_an_existing_game_template">Select from an existing game template:</string>
    <string name="select_game_you_want_to_play">Select Game you want to play:</string>
    <string name="create_new_game_template">Create New Game Template</string>
    <string name="game_name">Game Name</string>
    <string name="add_male" />
    <string name="add_female" />

    <string-array name="dicenumbers">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>

    <string-array name="sidesnumbers">
        <item>4</item>
        <item>6</item>
        <item>8</item>
        <item>10</item>
        <item>12</item>
        <item>20</item>
    </string-array>
</resources>